attached_assets/Pasted-PS-C-Users-yashw-AI-Wardrobe-App-AI-Wardrobe-App-node-scripts-test-env-js-file-C-Users-y-1746861864991.txt
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> node scripts/test-env.js
>> 
file:///C:/Users/yashw/AI-Wardrobe-App/AI-Wardrobe-App/scripts/test-env.js:14
import { Pool } from 'pg';
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> ./scripts/set-env.ps1
Environment variables set successfully!

Database URL: postgres://postgres:postgres@localhost:3000/chers_closet
PostgreSQL Host: localhost
PostgreSQL Port: 3000
PostgreSQL User: postgres
PostgreSQL Database: chers_closet
Session Secret: [HIDDEN]
Node Environment: development

Now you can run the application with: npm run dev
NOTE: These variables are only set for the current PowerShell session
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> npm run dev

> rest-express@1.0.0 dev
> tsx server/index.ts

Loading environment from: C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\.env
=== Environment Debug Info ===
Current directory: C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App
Root directory: C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App
Env path: C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\.env
Env file exists: true
DATABASE_URL defined: true
PGHOST defined: true
PGUSER defined: true
PGDATABASE defined: true
NODE_ENV: development
=============================
Loading environment from: C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\.env
Environment variables loaded successfully from .env file
[2025-05-10T07:23:57.970Z] [INFO] [app] Verifying database health...
[2025-05-10T07:23:58.016Z] [ERROR] [database] Database connection test failed (attempt 1/3): [object Object]

file:///C:/Users/yashw/AI-Wardrobe-App/AI-Wardrobe-App/node_modules/@neondatabase/serverless/index.mjs:1345
o?t(o):n(u)},"cb"),s=new r(function(o,u){n=o,t=u}).catch(o=>{throw Error.captureStackTrace(
                                                                         ^
ErrorEvent {
  [Symbol(kTarget)]: WebSocket {
    _events: [Object: null prototype] {
      error: [Function: onError] {
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function (anonymous)]
      },
      message: [Function: onMessage] {
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function (anonymous)]
      },
      close: [Function: onClose] {
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function (anonymous)]
      },
      open: [Function: onOpen] {
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function: handleWebSocketOpen]
      }
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    _closeFrameSent: false,
    _closeMessage: Buffer(0) [Uint8Array] [],
    _closeTimer: null,
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
    _sender: null,
    _socket: null,
    _bufferedAmount: 0,
    _isServer: false,
    _redirects: 0,
    _autoPong: true,
    _url: 'wss://localhost/v2',
    _req: null,
    [Symbol(shapeMode)]: false,
    [Symbol(kCapture)]: false
  },
  [Symbol(kType)]: 'error',
  [Symbol(kError)]: AggregateError [ECONNREFUSED]:
      at internalConnectMultiple (node:net:1139:18)
      at afterConnectMultiple (node:net:1712:7) {
    code: 'ECONNREFUSED',
    [errors]: [
      Error: connect ECONNREFUSED 127.0.0.1:443
          at createConnectionError (node:net:1675:14)
          at afterConnectMultiple (node:net:1705:16) {
        errno: -4078,
        code: 'ECONNREFUSED',
        syscall: 'connect',
        address: '127.0.0.1',
        port: 443
      },
      Error: connect ECONNREFUSED ::1:443
          at createConnectionError (node:net:1675:14)
          at afterConnectMultiple (node:net:1705:16) {
        errno: -4078,
        code: 'ECONNREFUSED',
        syscall: 'connect',
        address: '::1',
        port: 443
      }
    ]
  },
  [Symbol(kMessage)]: ''
}

Node.js v22.14.0
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App>